--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.24.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
